[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://src/scenes/ModPanel.gd" type="Script" id=2]
[ext_resource path="res://assets/images/gui/panels/1,1.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/inventory/item_frame.png" type="Texture" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 500, 500 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 590, 51 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 590, 51 )

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Control" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -659.0
margin_bottom = -277.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1236.0
margin_bottom = 778.0

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 561.0
margin_bottom = 753.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/PanelContainer2"]
margin_right = 561.0
margin_bottom = 753.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer2/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 531.0
margin_bottom = 723.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
margin_right = 501.0
margin_bottom = 35.0
text = "Loaded mods"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 501.0
margin_bottom = 112.0
text = "these mods will be applied to game and avaliable in editor at next game start."
autowrap = true

[node name="ScrollContainer2" type="ItemList" parent="MarginContainer/HBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 501.0
margin_bottom = 693.0
size_flags_vertical = 3
custom_styles/selected_focus = SubResource( 2 )
custom_styles/bg_focus = SubResource( 3 )
custom_styles/selected = SubResource( 4 )
custom_styles/bg = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 565.0
margin_right = 645.0
margin_bottom = 753.0
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 219.0
margin_right = 80.0
margin_bottom = 268.251
text = "<"

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 272.0
margin_right = 80.0
margin_bottom = 321.251
text = ">"

[node name="Button3" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 325.0
margin_right = 80.0
margin_bottom = 374.251
text = "Up"

[node name="Button4" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 378.0
margin_right = 80.8375
margin_bottom = 427.251
text = "Down"

[node name="Button5" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 431.0
margin_right = 80.0
margin_bottom = 480.251
text = "Ok"

[node name="Button6" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 484.0
margin_right = 80.0
margin_bottom = 533.251
text = "Close"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 649.0
margin_right = 1211.0
margin_bottom = 753.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/PanelContainer"]
margin_right = 562.0
margin_bottom = 753.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 532.0
margin_bottom = 723.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 502.0
margin_bottom = 35.0
text = "List of mods avaliable to load"

[node name="ScrollContainer2" type="ItemList" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 39.0
margin_right = 502.0
margin_bottom = 693.0
size_flags_vertical = 3
custom_styles/selected_focus = SubResource( 2 )
custom_styles/bg_focus = SubResource( 3 )
custom_styles/selected = SubResource( 4 )
custom_styles/bg = SubResource( 5 )

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 261.39
margin_top = 204.0
margin_right = 1020.39
margin_bottom = 356.0
window_title = "Restart game"
dialog_text = "Changes saved. 
Restart game to reload content of selected mods."

[node name="Button" type="Button" parent="."]
margin_left = 434.506
margin_top = 810.104
margin_right = 830.506
margin_bottom = 878.104
text = "Open Editor (Alpha Version)"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button" to="." method="add_mod"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button2" to="." method="remove_mod"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button3" to="." method="m_up"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button4" to="." method="m_down"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button5" to="." method="on_ok"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button6" to="." method="on_cancel"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
